Added login and register pages
Added the php,css and js for login and register pages. Also moved files around to create a more consistent folder structure and updated href file paths

--- a/css/login.css
+++ b/css/login.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Work Sans', sans-serif;
   font-weight: 800;
   min-height: 100%;
+  /* background-color: #0083b7; */
   background-image: linear-gradient(0deg, #0083b7, #004e6d);
 }
 
@@ -151,3 +152,54 @@ nav a:hover {
   text-align: center;
   padding: 3vw;
 }
+
+.loginbtn{
+    border-radius: 15px;
+    background-color: white;
+    color: black;
+    border-color: black;
+    border-width: 2px;
+  }
+  
+  .loginbtn:hover{
+    background-color: rgb(235, 235, 235);
+  }
+
+  
+.loginDiv {
+    flex-direction: column;
+        margin: auto;
+        display: flex;
+        width: auto;
+  }
+  
+  .subdiv{
+    flex-direction: column;
+        margin: auto;
+        display: flex;
+        width: auto;
+  
+  }
+
+  .headingPage {
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    font-weight: 900;
+    font-size: 3.5vw;
+    text-align: center;
+    /* border: 2px solid #FFFF00; */
+  }
+
+  .loginBlock {
+    display: flex;
+    background-color: white;
+    border-radius: 20px;
+      border-color: #fff;
+    width: 30%;
+    margin: auto;
+    box-shadow: 10px 10px 47px -8px rgba(0, 0, 0, 0.75);
+  }
+
+  .formInput{
+      border-radius: 5px;
+  }
