Summary of all changes, Ronin
Login validation and implementation. Also added session_start to every relevant page and we have a login session variable now

--- a/css/login.css
+++ b/css/login.css
@@ -64,3 +64,15 @@ body {
   .formInput{
       border-radius: 5px;
   }
+
+  #continue{
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+  #continue2{
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+  }
