Fixed Issues for login
Fixed login issues - Ronin

--- a/css/login.css
+++ b/css/login.css
@@ -65,7 +65,7 @@ body {
       border-radius: 5px;
   }
 
-/*   #continue{
+   #continue{
     position: relative;
     text-align: center;
     color: white;
@@ -75,4 +75,4 @@ body {
     text-align: center;
     text-decoration: none;
     color: white;
-  } */
+  } 
