--- a/css/scores.css
+++ b/css/scores.css
@@ -50,6 +50,17 @@ body {
     text-align: center;
   }
 
+  .stateOptionsBlock{
+
+    /* background-color: rgb(177, 67, 67); */
+    height: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    text-align: center;
+  }
+
 
   .choiceQueryBtn{
     border-radius: 20px;
@@ -79,6 +90,7 @@ body {
     height: 30px;
     font-size: 14px;
     text-align: center;
+    margin: 5px;
   }
 
   .inputBlock{
@@ -89,9 +101,6 @@ body {
     overflow:hidden;
         overflow-y: scroll;
   }
-
-  
-  
 
   .confirmBlock{
 
@@ -106,10 +115,8 @@ body {
 
   .tableBlock {
     
-    overflow:hidden;
-        overflow-y: scroll;
-        overflow-x: scroll;
     display: flex;
+    flex-direction: column;
     background-color: white;
     border-radius: 20px;
       border-color: #fff;
@@ -117,6 +124,22 @@ body {
     height: 500px;
     margin: auto;
     box-shadow: 10px 10px 47px -8px rgba(0, 0, 0, 0.75);
+  }
+
+  .innerTableBlock {
+    
+    overflow:hidden;
+        overflow-y: scroll;
+        overflow-x: scroll;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 20px;
+      border-color: #fff;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+  /*   box-shadow: 10px 10px 47px -8px rgba(0, 0, 0, 0.75); */
   }
 
   .formInput{
