--- a/css/teams.css
+++ b/css/teams.css
@@ -88,6 +88,7 @@ body {
 
   .tableBlock {
     
+    flex-direction: column;
     overflow:hidden;
         overflow-y: scroll;
         overflow-x: scroll;
